* 
Release 2.14.1 Start 21/09/2021
======= Release Highlights ================================================
===========================================================================
- 21/09/2021
01. batv.c: refactored code. Return error type during validation
02. added man pages for batv
03. Fixed typos

* 
Release 2.14.0 Start 18/07/2021
======= Release Highlights ================================================
o alpine linux ready - openrc script, svctool, minisvc
o github packages - docker/podman images for
  [docker/podman](https://ghcr.io/mbhangui/indimail-mta)
o instant reconfiguration of domain for docker/podman containers
o use global variables directory /etc/indimail/control/global_vars for
  DEFAULT_DOMAIN, QMAILDEFAULTHOST
o installer can now install, uninstall and set permissions
o New control file dkimkeys to override DKIMKEY and allow domain specfic
  keys and selector
===========================================================================
- 18/07/2021
1.  autoresponder.c: conditional define of _XOPEN_SOURCE to avoid
    compilation warning on alpine
2.  Makefile: Fix compilation of qmail-rm target by check for fts lib
3.  qmail-qfilter.c: Corrected by using fcntl.h instead of sys/fcntl.h
4.  installer.c: fixed setting setuid/setgid bits by calling chmod after
    chown
- 19/07/2021
5.  svctool: fixes for alpine linux
6.  svctool: recoded create_users function
7.  qmail-daemon.c: exit 0 if flagexitasap is set
8.  Makefile, indimail-mta.spec: moved creation of indimail-mta-release to
    Makefile
9.  create_service, PKGBUILD.in: --norefreshsvc changed to --autorefresh
10. ported create_users for alpine linux
11. create_service: use tcprules to generate cdb. changed --norefreshsvc
    to --autorefresh
12. tcpopen.c, Makefile: use hasrresvport.h to conditionally compile
    rresvport
- 20/07/2021
13. queue-fix.c: fixed usage string
14. create_services: fixed udplogger service not getting created