@@ -6,6 +6,8 @@ Release 2.14.1 Start 21/09/2021
 01. batv.c: refactored code. Return error type during validation
 02. added man pages for batv
 03. Fixed typos
+- 04/10/2021
+04. svctool.in: removed not-needed QUERY_CACHE env variable from defaultqueue
 
 * 
 Release 2.14.0 Start 18/07/2021
